# neocortex-orchestrator

./: README.md
neocortex-orchestrator/: Dockerfile  LICENSE  docker-compose.yml  pyproject.toml  requirements.txt
neocortex-orchestrator/benchmarks/: eval_set.json  run_benchmark.py
neocortex-orchestrator/examples/: quickstart.py  seed_knowledge_base.py
neocortex-orchestrator/scripts/: dev.sh
neocortex-orchestrator/src/neocortex/: config.py  embeddings.py
neocortex-orchestrator/src/neocortex/agents/: auditor.py  executor.py  supervisor.py
neocortex-orchestrator/src/neocortex/api/: main.py  websocket_manager.py
neocortex-orchestrator/src/neocortex/api/dashboard/: index.html
neocortex-orchestrator/src/neocortex/drift/: semantic_drift.py
neocortex-orchestrator/src/neocortex/graph/: orchestrator.py  state.py
neocortex-orchestrator/src/neocortex/llm/: client.py
neocortex-orchestrator/src/neocortex/memory/: knowledge_graph.py  redis_bus.py
neocortex-orchestrator/src/neocortex/nli/: consistency.py
neocortex-orchestrator/tests/: conftest.py  test_api.py  test_drift.py  test_supervisor.py
